--- a/local/src_v6/components/pages/card/sl-products/index.pug
+++ b/local/src_v6/components/pages/card/sl-products/index.pug
@@ -12,7 +12,7 @@ include ../../../../components/block/b-section/index
       title: 'также покупают',
       slides: [
           {
-              className: 'price-red',
+              className: 'card-links-3-card--price-red',
               img: 'img/tmp/card-links-3-card-01.png',
               title: 'bes',
               desc: 'BES активный шампунь для жирных волос s1',
