--- a/local/src_v6/components/pages/favorites/content/index.pug
+++ b/local/src_v6/components/pages/favorites/content/index.pug
@@ -3,7 +3,7 @@ include ../../../../components/block/card-links-3/index
 +card-links-3({
     cards: [
         {
-            className: 'price-red favorites-active',
+            className: 'card-links-3-card--price-red favorites-active',
             img: 'img/tmp/card-links-3-card-01.png',
             title: 'bes',
             desc: 'BES активный шампунь для жирных волос s1',
