--- a/local/src_v6/components/pages/index/sl-products/index.pug
+++ b/local/src_v6/components/pages/index/sl-products/index.pug
@@ -12,7 +12,7 @@ include ../../../../components/block/b-section/index
       title: 'популярные товары',
       slides: [
           {
-              className: 'price-red',
+              className: 'card-links-3-card--price-red',
               img: 'img/tmp/card-links-3-card-01.png',
               title: 'bes',
               desc: 'BES активный шампунь для жирных волос s1',
@@ -67,7 +67,7 @@ include ../../../../components/block/b-section/index
       title: 'скидки',
       slides: [
           {
-              className: 'price-red',
+              className: 'card-links-3-card--price-red',
               img: 'img/tmp/card-links-3-card-01.png',
               title: 'bes',
               desc: 'BES активный шампунь для жирных волос s1',
@@ -122,7 +122,7 @@ include ../../../../components/block/b-section/index
       title: 'Новинки',
       slides: [
           {
-              className: 'price-red',
+              className: 'card-links-3-card--price-red',
               img: 'img/tmp/card-links-3-card-01.png',
               title: 'bes',
               desc: 'BES активный шампунь для жирных волос s1',
