--- a/local/src_v6/components/pages/stock/sl-products/index.pug
+++ b/local/src_v6/components/pages/stock/sl-products/index.pug
@@ -12,7 +12,7 @@ include ../../../../components/block/b-section/index
       title: 'товары акции',
       slides: [
           {
-              className: 'price-red',
+              className: 'card-links-3-card--price-red',
               img: 'img/tmp/card-links-3-card-05.png',
               title: 'RILASTIL',
               desc: 'Солнцезащитный флюид для чувствительной кожи SPF 50+',
@@ -49,7 +49,7 @@ include ../../../../components/block/b-section/index
               old: '',
           },
           {
-              className: 'price-red',
+              className: 'card-links-3-card--price-red',
               img: 'img/tmp/card-links-3-card-05.png',
               title: 'RILASTIL',
               desc: 'Солнцезащитный флюид для чувствительной кожи SPF 50+',
