--- a/local/templates/.default/index.html
+++ b/local/templates/.default/index.html
@@ -1082,7 +1082,7 @@
 																										<div class="slider">
 																											<div class="slide">
 																												<div class="inner">
-																																				<div class="card-links-3-card price-red"><a class="card-links-3-card__main-link" href="#"></a>
+																																				<div class="card-links-3-card card-links-3-card--price-red"><a class="card-links-3-card__main-link" href="#"></a>
 																																					<div class="card-links-3-card__inner">
 																																						<div class="card-links-3-card__top">
 																																							<div class="card-links-3-card__favorites"><a class="favorites__btn toFavoritesBtn"></a></div>
@@ -1294,7 +1294,7 @@
 																										<div class="slider">
 																											<div class="slide">
 																												<div class="inner">
-																																				<div class="card-links-3-card price-red"><a class="card-links-3-card__main-link" href="#"></a>
+																																				<div class="card-links-3-card card-links-3-card--price-red"><a class="card-links-3-card__main-link" href="#"></a>
 																																					<div class="card-links-3-card__inner">
 																																						<div class="card-links-3-card__top">
 																																							<div class="card-links-3-card__favorites"><a class="favorites__btn toFavoritesBtn"></a></div>
@@ -1506,7 +1506,7 @@
 																										<div class="slider">
 																											<div class="slide">
 																												<div class="inner">
-																																				<div class="card-links-3-card price-red"><a class="card-links-3-card__main-link" href="#"></a>
+																																				<div class="card-links-3-card card-links-3-card--price-red"><a class="card-links-3-card__main-link" href="#"></a>
 																																					<div class="card-links-3-card__inner">
 																																						<div class="card-links-3-card__top">
 																																							<div class="card-links-3-card__favorites"><a class="favorites__btn toFavoritesBtn"></a></div>
