--- a/local/src_v6/components/pages/index/card-links-3/index.pug
+++ b/local/src_v6/components/pages/index/card-links-3/index.pug
@@ -4,7 +4,7 @@ include ../../../../components/block/card-links-3/index
 +card-links-3({
     cards: [
         {
-            className: 'price-red',
+            className: 'card-links-3-card--price-red',
             img: 'img/tmp/card-links-3-card-01.png',
             title: 'bes',
             desc: 'BES активный шампунь для жирных волос s1',
