--- a/local/templates/.default/favorites.html
+++ b/local/templates/.default/favorites.html
@@ -899,7 +899,7 @@
 														<div class="card-links-3">
 															<div class="card-links-3__row row">
 																<div class="card-links-3__col col-xl-3 col-lg-4 col-6">
-																								<div class="card-links-3-card price-red favorites-active"><a class="card-links-3-card__main-link" href="#"></a>
+																								<div class="card-links-3-card card-links-3-card--price-red favorites-active"><a class="card-links-3-card__main-link" href="#"></a>
 																									<div class="card-links-3-card__inner">
 																										<div class="card-links-3-card__top">
 																											<div class="card-links-3-card__favorites"><a class="favorites__btn toFavoritesBtn"></a></div>
