width sort-by menu in catalog page

--- a/local/src_v6/components/block/catalog-filters/style.scss
+++ b/local/src_v6/components/block/catalog-filters/style.scss
@@ -28,7 +28,7 @@
     }
 
     @include hover-focus() {
-      color: $brand-3;
+      color: $brand-gray-12;
       text-decoration: none;
 
       &:before {
