--- a/local/templates/.default/_standart/basket/order-make_entity.html
+++ b/local/templates/.default/_standart/basket/order-make_entity.html
@@ -1217,7 +1217,8 @@
 												</li>
 											</ul>
 											<ul class="menu_level_1 break-word list-reset d-none d-md-block">
-												<li class="item_1"><a class="d-none d-md-block" href="#"><span><br></span></a>
+												<li class="item_1">
+													<div class="d-none d-md-inline-block"><span><br></span></div>
 													<div class="submenu">
 														<ul class="menu_level_2 list-reset">
 															<li class="item_2"><a href="#"><span>Для мужчин</span></a></li>
