--- a/local/templates/.default/_standart/catalog/list-line.html
+++ b/local/templates/.default/_standart/catalog/list-line.html
@@ -1267,6 +1267,7 @@
 								<nav class="pagination-wrap">
 									<ul class="pagination list-reset">
 										<li class="page-item disabled"><span class="page-link prev"><span>пред</span></span></li>
+										<li class="page-item"><a class="page-link" href="#"><span>1</span></a></li>
 										<li class="page-item active"><a class="page-link" href="#"><span>2</span></a></li>
 										<li class="page-item"><a class="page-link" href="#"><span>3</span></a></li>
 										<li class="page-item"><a class="page-link" href="#"><span>4</span></a></li>
@@ -1324,7 +1325,8 @@
 												</li>
 											</ul>
 											<ul class="menu_level_1 break-word list-reset d-none d-md-block">
-												<li class="item_1"><a class="d-none d-md-block" href="#"><span><br></span></a>
+												<li class="item_1">
+													<div class="d-none d-md-inline-block"><span><br></span></div>
 													<div class="submenu">
 														<ul class="menu_level_2 list-reset">
 															<li class="item_2"><a href="#"><span>Для мужчин</span></a></li>
