--- a/local/templates/.default/payment-delivery.html
+++ b/local/templates/.default/payment-delivery.html
@@ -932,7 +932,7 @@
 															<h3>Самовывоз</h3>
 															<p class="mb-0">Адрес для самовывоза: г. Минск, ул. Сурганова 50, второй этаж, место 56 магазин «Профи». Сделать это можно в течении 3-х дней с момента подтверждения заказа менеджером, с 10:00 до 20:00</p>
 															<blockquote class="style-2">
-																<p class="mb-0">Если Вас не устраивает ни один из приведенных ниже вариантов (сроки, стоимость и т. д.) -<a href="#">свяжитесь</a> с нашим менеджером и он обязательно подберет для вас оптимальный вариант!</p>
+																<p class="mb-0">Если Вас не устраивает ни один из приведенных ниже вариантов <br>(сроки, стоимость и т. д.) -<a href="#">свяжитесь</a> с нашим менеджером и он обязательно подберет для вас оптимальный вариант!</p>
 															</blockquote>
 														</div>
 													</div>
@@ -946,7 +946,7 @@
 																<li>Банковской картой при самовывозе на ТЦ Рига,  а также через систему электронных платежей на нашем сайте</li>
 															</ul>
 															<blockquote class="style-2">
-																<p class="mb-0">Безопасность совершения платежа обеспечивается современными методами проверки, шифрования и передачи данных по закрытым каналам связи.<br><br>Ввод данных карточки осуществляется на защищенной авторизационной странице банка. Для оплаты необходимо ввести реквизиты карточки: номер, имя держателя, срок действия и трехзначный код безопасности. Трёхзначный код безопасности (CVV2 для VISA, CVC2 для MasterCard) — это три цифры, находящиеся на обратной стороне карточки. Если карточка поддерживает технологию 3DSecure, для ввода кода безопасности Вы будете перенаправлены на страницу банка, выпустившего карточку.<br><br>Предоставляемая Вами персональная информация (например: имя, адрес, телефон, e-mail, номер банковской карты и прочее) является конфиденциальной и не подлежит разглашению. Данные карточки передаются только в зашифрованном виде и не сохраняются на данном интернет-ресурсе.</p>
+																<p class="mb-0">Безопасность совершения платежа обеспечивается современными методами проверки, шифрования и передачи данных по закрытым каналам связи.<br><br>Ввод данных карточки осуществляется на защищенной авторизационной странице банка. Для оплаты необходимо ввести реквизиты карточки: номер, имя держателя, срок действия и трехзначный код безопасности. Трёхзначный код безопасности (CVV2 для VISA, CVC2 для MasterCard) — это три цифры, находящиеся на обратной стороне карточки. Если карточка поддерживает технологию 3DSecure, для ввода кода безопасности Вы будете перенаправлены на страницу банка, выпустившего карточку.<br><br>Предоставляемая Вами персональная информация (например: имя, адрес, телефон, e&#8209;mail, номер банковской карты и прочее) является конфиденциальной и не подлежит разглашению. Данные карточки передаются только в зашифрованном виде и не сохраняются на данном интернет-ресурсе.</p>
 															</blockquote>
 														</div>
 													</div>
