--- a/local/src_v6/components/pages/payment-delivery/content/index.pug
+++ b/local/src_v6/components/pages/payment-delivery/content/index.pug
@@ -44,7 +44,7 @@
                 p.mb-0 Адрес для самовывоза: г. Минск, ул. Сурганова 50, второй этаж, место 56 магазин «Профи». Сделать это можно в течении 3-х дней с момента подтверждения заказа менеджером, с 10:00 до 20:00
                 blockquote.style-2
                   p.mb-0
-                    | Если Вас не устраивает ни один из приведенных ниже вариантов (сроки, стоимость и т. д.) -
+                    | Если Вас не устраивает ни один из приведенных ниже вариантов <br>(сроки, стоимость и т. д.) -
                     a(href='#') свяжитесь
                     |  с нашим менеджером и он обязательно подберет для вас оптимальный вариант!
           #tab-03.tab-pane.panel.fade(role='tabpanel')
@@ -66,4 +66,4 @@
                     | Ввод данных карточки осуществляется на защищенной авторизационной странице банка. Для оплаты необходимо ввести реквизиты карточки: номер, имя держателя, срок действия и трехзначный код безопасности. Трёхзначный код безопасности (CVV2 для VISA, CVC2 для MasterCard) — это три цифры, находящиеся на обратной стороне карточки. Если карточка поддерживает технологию 3DSecure, для ввода кода безопасности Вы будете перенаправлены на страницу банка, выпустившего карточку.
                     br
                     br
-                    | Предоставляемая Вами персональная информация (например: имя, адрес, телефон, e-mail, номер банковской карты и прочее) является конфиденциальной и не подлежит разглашению. Данные карточки передаются только в зашифрованном виде и не сохраняются на данном интернет-ресурсе.
+                    | Предоставляемая Вами персональная информация (например: имя, адрес, телефон, e&#8209;mail, номер банковской карты и прочее) является конфиденциальной и не подлежит разглашению. Данные карточки передаются только в зашифрованном виде и не сохраняются на данном интернет-ресурсе.
