--- a/local/templates/.default/card.html
+++ b/local/templates/.default/card.html
@@ -893,12 +893,22 @@
 				</header>
 				<div class="g-main">
 					<div class="container">
-						<nav>
-							<ol class="breadcrumb list-reset">
-								<li class="breadcrumb-item" typeof="v:Breadcrumb"><a href="#">Каталог</a></li>
-								<li class="breadcrumb-item active"><span>Волосы</span></li>
-							</ol>
-						</nav>
+												<nav>
+													<ol class="breadcrumb list-reset">
+														<li class="breadcrumb-item">
+															<a href="#">Каталог</a>
+														</li>
+														<li class="breadcrumb-item">
+															<a href="#">Волосы</a>
+														</li>
+														<li class="breadcrumb-item">
+															<a href="#">Бальзамы</a>
+														</li>
+														<li class="breadcrumb-item">
+															<span class="active">Alfaparf Milano SDL Diamond Normal Hair Кондиционер придающий блеск для нормальных волос</span>
+														</li>
+													</ol>
+												</nav>
 						<main class="g-content" id="workarea">
 							<div class="prod">
 								<div class="prod__row prod__row--main row">
