--- a/local/templates/.default/favorites.html
+++ b/local/templates/.default/favorites.html
@@ -889,12 +889,13 @@
 				</header>
 				<div class="g-main">
 					<div class="container">
-						<nav>
-							<ol class="breadcrumb list-reset">
-								<li class="breadcrumb-item" typeof="v:Breadcrumb"><a href="#">Каталог</a></li>
-								<li class="breadcrumb-item active"><span>Волосы</span></li>
-							</ol>
-						</nav>
+												<nav>
+													<ol class="breadcrumb list-reset">
+														<li class="breadcrumb-item">
+															<span class="active">Избранное</span>
+														</li>
+													</ol>
+												</nav>
 						<main class="g-content" id="workarea">
 														<div class="card-links-3">
 															<div class="card-links-3__row row">
