--- a/local/src_v6/pages/proj/blog.pug
+++ b/local/src_v6/pages/proj/blog.pug
@@ -3,7 +3,10 @@ block pageVars
   - DB.pageTitle = 'Блог';
   - DB.layout = 'wide';
   // - DB.bodyClass = 'no-padding-bottom'
+  - DB.breadcrumb = ['Блог']
 block title
+block breadcrumbs
+  include ../../components/base/breadcrumb/index
 block content
   include ../../components/pages/blog/blog/index
   include ../../components/base/pagination/index
