--- a/local/src_v6/pages/proj/brands.pug
+++ b/local/src_v6/pages/proj/brands.pug
@@ -3,7 +3,10 @@ block pageVars
   - DB.pageTitle = 'Бренды';
   - DB.layout = 'wide';
   // - DB.bodyClass = 'no-padding-bottom'
+  - DB.breadcrumb = ['Бренды']
 block title
+block breadcrumbs
+  include ../../components/base/breadcrumb/index
 block content
   include ../../components/pages/brands/brands/index
 block contentBottom
