--- a/local/src_v6/pages/proj/payment-delivery.pug
+++ b/local/src_v6/pages/proj/payment-delivery.pug
@@ -3,7 +3,10 @@ block pageVars
   - DB.pageTitle = 'Оплата и доставка';
   - DB.layout = 'wide';
   // - DB.bodyClass = 'no-padding-bottom'
+  - DB.breadcrumb = ['Покупателю', 'Оплата и доставка']
 block title
+block breadcrumbs
+  include ../../components/base/breadcrumb/index
 block content
   include ../../components/pages/payment-delivery/content/index
 block contentBottom
