--- a/local/src_v6/pages/proj/registration.pug
+++ b/local/src_v6/pages/proj/registration.pug
@@ -3,7 +3,10 @@ block pageVars
   - DB.pageTitle = 'регистрация';
   - DB.layout = 'wide';
   - DB.bodyClass = 'no-padding-bottom lk'
+  - DB.breadcrumb = ['Регистрация']
 block title
+block breadcrumbs
+  include ../../components/base/breadcrumb/index
 block content
   include ../../components/block/lk-classes/index
   include ../../components/pages/registration/content/index
