--- a/local/templates/.default/blog.html
+++ b/local/templates/.default/blog.html
@@ -890,12 +890,13 @@
 				</header>
 				<div class="g-main">
 					<div class="container">
-						<nav>
-							<ol class="breadcrumb list-reset">
-								<li class="breadcrumb-item" typeof="v:Breadcrumb"><a href="#">Каталог</a></li>
-								<li class="breadcrumb-item active"><span>Волосы</span></li>
-							</ol>
-						</nav>
+												<nav>
+													<ol class="breadcrumb list-reset">
+														<li class="breadcrumb-item">
+															<span class="active">Блог</span>
+														</li>
+													</ol>
+												</nav>
 						<main class="g-content" id="workarea">
 							<div class="blog">
 								<div class="blog-banner">
