--- a/local/templates/.default/card-2.html
+++ b/local/templates/.default/card-2.html
@@ -893,12 +893,22 @@
 				</header>
 				<div class="g-main">
 					<div class="container">
-						<nav>
-							<ol class="breadcrumb list-reset">
-								<li class="breadcrumb-item" typeof="v:Breadcrumb"><a href="#">Каталог</a></li>
-								<li class="breadcrumb-item active"><span>Волосы</span></li>
-							</ol>
-						</nav>
+												<nav>
+													<ol class="breadcrumb list-reset">
+														<li class="breadcrumb-item">
+															<a href="#">Каталог</a>
+														</li>
+														<li class="breadcrumb-item">
+															<a href="#">Ногти</a>
+														</li>
+														<li class="breadcrumb-item">
+															<a href="#">Гель-лаки</a>
+														</li>
+														<li class="breadcrumb-item">
+															<span class="active">IRISK NUDE STRONG Каучуковый гель-лак</span>
+														</li>
+													</ol>
+												</nav>
 						<main class="g-content" id="workarea">
 							<div class="prod">
 								<div class="prod__row prod__row--main row">
