--- a/local/templates/.default/contacts.html
+++ b/local/templates/.default/contacts.html
@@ -890,12 +890,16 @@
 				</header>
 				<div class="g-main">
 					<div class="container">
-						<nav>
-							<ol class="breadcrumb list-reset">
-								<li class="breadcrumb-item" typeof="v:Breadcrumb"><a href="#">Каталог</a></li>
-								<li class="breadcrumb-item active"><span>Волосы</span></li>
-							</ol>
-						</nav>
+												<nav>
+													<ol class="breadcrumb list-reset">
+														<li class="breadcrumb-item">
+															<a href="#">Покупателю</a>
+														</li>
+														<li class="breadcrumb-item">
+															<span class="active">Контакты</span>
+														</li>
+													</ol>
+												</nav>
 						<main class="g-content" id="workarea">
 														<div class="b-head b-head--contacts b-head--align-center">
 															<div class="b-head__row">
