--- a/local/templates/.default/_standart/examples/main-pic.html
+++ b/local/templates/.default/_standart/examples/main-pic.html
@@ -892,12 +892,16 @@
 						<div class="main-pic">
 							<div class="main-pic__bg"><img class="main-pic__pic" src="../../img/tmp/main-pic_01.jpg" alt="alt"></div>
 							<div class="main-pic__wrap">
-								<nav>
-									<ol class="breadcrumb list-reset">
-										<li class="breadcrumb-item" typeof="v:Breadcrumb"><a href="#">Каталог</a></li>
-										<li class="breadcrumb-item active"><span>Волосы</span></li>
-									</ol>
-								</nav>
+																<nav>
+																	<ol class="breadcrumb list-reset">
+																		<li class="breadcrumb-item">
+																			<a href="#">Каталог</a>
+																		</li>
+																		<li class="breadcrumb-item">
+																			<span class="active">Волосы</span>
+																		</li>
+																	</ol>
+																</nav>
 								<div class="main-pic__text-wrap">
 									<h1 class="main-pic__title">О Студии</h1>
 									<div class="main-pic__descr">Мы будем рады проконсультировать вас по вашему проекту и предложить свою экспертизу в решении бизнес-задач.</div>
