--- a/local/templates/.default/auth.html
+++ b/local/templates/.default/auth.html
@@ -892,7 +892,7 @@
 												<nav>
 													<ol class="breadcrumb list-reset">
 														<li class="breadcrumb-item">
-															<span class="active">Бренды</span>
+															<span class="active">Авторизация</span>
 														</li>
 													</ol>
 												</nav>
