--- a/local/templates/.default/stocks.html
+++ b/local/templates/.default/stocks.html
@@ -892,10 +892,7 @@
 												<nav>
 													<ol class="breadcrumb list-reset">
 														<li class="breadcrumb-item">
-															<a href="#">Каталог</a>
-														</li>
-														<li class="breadcrumb-item">
-															<span class="active">Волосы</span>
+															<span class="active">Акции</span>
 														</li>
 													</ol>
 												</nav>
