--- a/local/templates/.default/_standart/basket/cart.html
+++ b/local/templates/.default/_standart/basket/cart.html
@@ -889,12 +889,16 @@
 				</header>
 				<div class="g-main">
 					<div class="container">
-						<nav>
-							<ol class="breadcrumb list-reset">
-								<li class="breadcrumb-item" typeof="v:Breadcrumb"><a href="#">Каталог</a></li>
-								<li class="breadcrumb-item active"><span>Волосы</span></li>
-							</ol>
-						</nav>
+												<nav>
+													<ol class="breadcrumb list-reset">
+														<li class="breadcrumb-item">
+															<a href="#">Каталог</a>
+														</li>
+														<li class="breadcrumb-item">
+															<span class="active">Волосы</span>
+														</li>
+													</ol>
+												</nav>
 						<h1 id="title">Корзина</h1>
 						<main class="g-content" id="workarea">
 							<form class="basket_form" id="basket_form" method="post" action="/personal/cart/" name="basket_form">
