--- a/local/templates/.default/_standart/catalog/compare.html
+++ b/local/templates/.default/_standart/catalog/compare.html
@@ -889,12 +889,16 @@
 				</header>
 				<div class="g-main">
 					<div class="container">
-						<nav>
-							<ol class="breadcrumb list-reset">
-								<li class="breadcrumb-item" typeof="v:Breadcrumb"><a href="#">Каталог</a></li>
-								<li class="breadcrumb-item active"><span>Волосы</span></li>
-							</ol>
-						</nav>
+												<nav>
+													<ol class="breadcrumb list-reset">
+														<li class="breadcrumb-item">
+															<a href="#">Каталог</a>
+														</li>
+														<li class="breadcrumb-item">
+															<span class="active">Волосы</span>
+														</li>
+													</ol>
+												</nav>
 						<h1>Сравнение товаров</h1>
 						<main class="g-content" id="workarea">
 							<div class="bx_compare bx_blue" id="bx_catalog_compare_block">
