--- a/local/templates/.default/_standart/catalog/element-with-tabs.html
+++ b/local/templates/.default/_standart/catalog/element-with-tabs.html
@@ -1383,12 +1383,16 @@
 				</header>
 				<div class="g-main">
 					<div class="container">
-						<nav>
-							<ol class="breadcrumb list-reset">
-								<li class="breadcrumb-item" typeof="v:Breadcrumb"><a href="#">Каталог</a></li>
-								<li class="breadcrumb-item active"><span>Волосы</span></li>
-							</ol>
-						</nav>
+												<nav>
+													<ol class="breadcrumb list-reset">
+														<li class="breadcrumb-item">
+															<a href="#">Каталог</a>
+														</li>
+														<li class="breadcrumb-item">
+															<span class="active">Волосы</span>
+														</li>
+													</ol>
+												</nav>
 						<div class="element-title">
 							<h1 class="small title" id="title">Меньший размер заголовка для самого лучшего товара с длинным заголовком H1-2</h1>
 							<div class="element-rating">
