--- a/local/templates/.default/_standart/examples/headers/header-4.html
+++ b/local/templates/.default/_standart/examples/headers/header-4.html
@@ -246,12 +246,16 @@
 				</header>
 				<div class="g-main">
 					<div class="container">
-						<nav>
-							<ol class="breadcrumb list-reset">
-								<li class="breadcrumb-item" typeof="v:Breadcrumb"><a href="#">Каталог</a></li>
-								<li class="breadcrumb-item active"><span>Волосы</span></li>
-							</ol>
-						</nav>
+												<nav>
+													<ol class="breadcrumb list-reset">
+														<li class="breadcrumb-item">
+															<a href="#">Каталог</a>
+														</li>
+														<li class="breadcrumb-item">
+															<span class="active">Волосы</span>
+														</li>
+													</ol>
+												</nav>
 						<h1 id="title">H1 Заголовок страницы. В магазинах начался сезон скидок</h1>
 						<main class="g-content" id="workarea">
 						</main>
