--- a/local/src_v6/components/pages/card-2/sl-prod-wrap/index.pug
+++ b/local/src_v6/components/pages/card-2/sl-prod-wrap/index.pug
@@ -1,3 +1,30 @@
+include ../../../sliders/template/sl-prod/index
+include ../../../sliders/template/sl-prod-nav/index
+
 .sl-prod-wrap
-  include ../../../../components/catalog/sl-prod/index
-  include ../../../../components/catalog/sl-prod-nav/index
+  +sl-prod({
+      slides: [
+          {
+              pic: 'sl-prod-1.png'
+          },
+          {
+              pic: 'sl-prod-2.png'
+          },
+          {
+              pic: 'sl-prod-3.png'
+          }
+      ]
+  })
+  +sl-prod-nav({
+      slides: [
+          {
+              pic: 'sl-prod-1.png'
+          },
+          {
+              pic: 'sl-prod-2.png'
+          },
+          {
+              pic: 'sl-prod-3.png'
+          }
+      ]
+  })
