--- a/local/templates/.default/card-2.html
+++ b/local/templates/.default/card-2.html
@@ -972,7 +972,7 @@
 																												<button class="btn btn-primary-outline with-icon icon-left addToBasket js-addToBasket" type="button"><span class="icon"></span><span>в корзину</span></button>
 											</div>
 											<div class="prod__col prod__col--buy d-none d-lg-block">
-																												<button class="btn btn-primary-outline with-icon addFavorites" type="button"><span class="icon"></span></button>
+																												<button class="btn btn-primary-outline with-icon addFavorites toFavoritesBtn" type="button"><span class="icon"></span></button>
 											</div>
 										</div>
 																	<div class="accordion" id="accordion-30">
