--- a/local/src_v6/components/pages/card-2/prod/style.scss
+++ b/local/src_v6/components/pages/card-2/prod/style.scss
@@ -126,6 +126,10 @@
       padding-left: 0;
       padding-right: 0;
       width: 50px;
+
+      &.active {
+        background: $brand-gray-12;
+      }
     }
   }
 }
