lk checkbox styles

--- a/local/src_v6/components/base/forms/form_1/checkboxradio/style.scss
+++ b/local/src_v6/components/base/forms/form_1/checkboxradio/style.scss
@@ -6,6 +6,10 @@
     cursor: pointer;
     user-select: none;
 
+    .lk & {
+      color: $brand-gray-11;
+    }
+
     &.ui-state-disabled {
       opacity: .35;
     }
