--- a/local/src_v6/components/block/lk-classes/style.scss
+++ b/local/src_v6/components/block/lk-classes/style.scss
@@ -40,17 +40,52 @@
   }
 }
 
+.lk-content-descr {
+  margin-bottom: 41px;
+
+  @media (max-width: $screen-sm-max) {
+    margin-bottom: 20px;
+  }
+}
+
 .lk-form {
+
+  &.code-form {
+
+
+  }
+
+  .code-wrap {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+    max-width: 260px;
+
+    .form-control {
+      @include font-family-bold();
+      padding: 10px;
+      //height: 80px;
+      font-size: 47px;
+      text-align: center;
+    }
+  }
 
   .info-wrap {
     margin-top: 17px;
   }
 
   .btn-wrap {
-    margin-top: 20px;
+    margin-top: 8px;
 
     @media (max-width: $screen-sm-max) {
       margin-top: 0;
+    }
+
+    &.text-center {
+
+      .btn {
+        margin-right: 0;
+      }
     }
   }
   
