--- a/local/templates/.default/catalog.html
+++ b/local/templates/.default/catalog.html
@@ -901,7 +901,7 @@
 												</nav>
 						<h1 class="hidden" id="title">H1 Заголовок страницы. В магазинах начался сезон скидок</h1>
 						<div class="row">
-							<aside class="g-sidebar col-lg-3 col-12 d-print-none">
+							<aside class="g-sidebar col-xl-3 col-lg-4 col-12 d-print-none">
 																<div class="catalog-filters"><a class="catalog-filters__toggle collapsed" href="#catalog_filters_collapse" data-toggle="collapse">Фильтры</a>
 																	<div class="catalog-filters__collapse collapse" id="catalog_filters_collapse">
 																		<div class="catalog-filters__wrap">
@@ -1163,7 +1163,7 @@
 																	</div>
 																</div>
 							</aside>
-							<main class="g-content col-lg-9 col-12" id="workarea">
+							<main class="g-content col-xl-9 col-lg-8 col-12" id="workarea">
 								<div class="d-none d-lg-block">
 																		<div class="full-catalog-sort">
 																			<div class="full-catalog-sort__sort-by-wrap">
