--- a/local/templates/.default/etalon.html
+++ b/local/templates/.default/etalon.html
@@ -901,7 +901,7 @@
 												</nav>
 						<h1 id="title">H1 Заголовок страницы. В магазинах начался сезон скидок</h1>
 						<div class="row">
-							<aside class="g-sidebar col-lg-3 col-12 d-print-none">
+							<aside class="g-sidebar col-xl-3 col-lg-4 col-12 d-print-none">
 								<nav class="menu-aside-3">
 									<ul class="menu_level_1 list-reset break-word">
 										<li class="item_1"><a href="#"><span>Платежно-справочные терминалы</span></a><a class="icon" data-toggle="collapse" href="#accordion-m-0"></a>
@@ -957,7 +957,7 @@
 									</ul>
 								</nav>
 							</aside>
-							<main class="g-content col-lg-9 col-12" id="workarea">
+							<main class="g-content col-xl-9 col-lg-8 col-12" id="workarea">
 								<div class="lead">Вступительный абзац. Используется для в начале статьи Электрооборудование фирмы Siemens (УЧПУ SINUMERIK 840D (ядро, пульт, контроллер, базовое SW)</div>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad consequuntur culpa cumque dicta excepturi iusto sapiente sequi totam vero. Ab, consectetur iusto obcaecati officiis placeat sequi ullam veritatis? Aliquam, porro? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad consequuntur culpa cumque dicta excepturi iusto sapiente sequi totam vero.</p>
 								<div class="h1">H1 Тестовый заголовок</div>
