--- a/local/src_v6/components/aside/lk-aside/style.scss
+++ b/local/src_v6/components/aside/lk-aside/style.scss
@@ -7,6 +7,17 @@
     }
   }
 
+  &__list {
+
+    @media (max-width: $screen-md-max) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+      margin-left: -10px;
+      margin-right: -10px;
+    }
+  }
+
   &__item {
     display: table;
     vertical-align: middle;
@@ -18,6 +29,12 @@
     text-transform: uppercase;
     color: $brand-gray-10;
 
+    @media (max-width: $screen-md-max) {
+      padding: 0 10px;
+      margin-bottom: 10px;
+      font-size: 12px;
+    }
+
     &:before {
       content: '';
       display: block;
@@ -27,9 +44,14 @@
       bottom: 0;
       width: 2px;
       background: rgba($brand-gray-10, .2);
+
+      @media (max-width: $screen-md-max) {
+        display: none;
+      }
     }
 
     &.active {
+      color: $brand-danger;
 
       &:before {
         background: rgba($brand-gray-10, 1);
@@ -71,6 +93,14 @@
             @include svg-lk-menu-discont-active();
           }
         }
+      }
+    }
+
+    @include hover-focus() {
+      color: rgba($brand-gray-10, .7);
+
+      .lk-aside__icon {
+        opacity: .7;
       }
     }
   }
