--- a/local/templates/.default/_standart/catalog/filter.html
+++ b/local/templates/.default/_standart/catalog/filter.html
@@ -901,7 +901,7 @@
 												</nav>
 						<h1 id="title">Фильтр товаров</h1>
 						<div class="row">
-							<aside class="g-sidebar col-lg-3 col-12 d-print-none">
+							<aside class="g-sidebar col-xl-3 col-lg-4 col-12 d-print-none">
 								<div class="catalog-filter"><a class="catalog-filter-collapse collapsed" data-toggle="collapse" href="#collapseFilter">Подобрать товары по параметрам</a>
 									<div class="bx-filter collapse" id="collapseFilter">
 										<div class="bx-filter-section container-fluid">
@@ -1166,7 +1166,7 @@
 									</div>
 								</div>
 							</aside>
-							<main class="g-content col-lg-9 col-12" id="workarea">
+							<main class="g-content col-xl-9 col-lg-8 col-12" id="workarea">
 							</main>
 						</div>
 					</div>
