--- a/local/templates/.default/_standart/demo/subscr.html
+++ b/local/templates/.default/_standart/demo/subscr.html
@@ -901,7 +901,7 @@
 												</nav>
 						<h1 id="title">Рассылки</h1>
 						<div class="row">
-							<aside class="g-sidebar col-lg-3 col-12 d-print-none">
+							<aside class="g-sidebar col-xl-3 col-lg-4 col-12 d-print-none">
 								<nav class="menu-aside-3">
 									<ul class="menu_level_1 list-reset break-word">
 										<li class="item_1"><a href="#"><span>Платежно-справочные терминалы</span></a><a class="icon" data-toggle="collapse" href="#accordion-m-0"></a>
@@ -957,7 +957,7 @@
 									</ul>
 								</nav>
 							</aside>
-							<main class="g-content col-lg-9 col-12" id="workarea">
+							<main class="g-content col-xl-9 col-lg-8 col-12" id="workarea">
 								<div class="subscr">
 									<form class="form-horizontal" id="form-subscript-confirm2" method="post" action="/">
 										<fieldset class="fieldset">
