--- a/local/templates/.default/history.html
+++ b/local/templates/.default/history.html
@@ -902,19 +902,20 @@
 						<h1 class="hidden" id="title">H1 Заголовок страницы. В магазинах начался сезон скидок</h1>
 						<div class="row">
 							<aside class="g-sidebar col-xl-3 col-lg-4 col-12 d-print-none">
-								<div class="lk-aside">
-									<div class="lk-aside__list"><a class="lk-aside__item active" href="#">
-											<div class="lk-aside__text">история заказов</div>
-											<div class="lk-aside__icon lk-aside__icon--history"></div></a><a class="lk-aside__item" href="#">
-											<div class="lk-aside__text">персональные данные</div>
-											<div class="lk-aside__icon lk-aside__icon--personal"></div></a><a class="lk-aside__item" href="#">
-											<div class="lk-aside__text">адресная книга</div>
-											<div class="lk-aside__icon lk-aside__icon--address"></div></a><a class="lk-aside__item" href="#">
-											<div class="lk-aside__text">избранное</div>
-											<div class="lk-aside__icon lk-aside__icon--favorites"></div></a><a class="lk-aside__item" href="#">
-											<div class="lk-aside__text">дисконтная программа</div>
-											<div class="lk-aside__icon lk-aside__icon--discont"></div></a></div>
-								</div>
+																<div class="lk-aside">
+																	<div class="lk-aside__list"><a class="lk-aside__item active" href="#">
+																			<div class="lk-aside__text">история заказов</div>
+																			<div class="lk-aside__icon lk-aside__icon--history"></div></a><a class="lk-aside__item" href="#">
+																			<div class="lk-aside__text">персональные данные</div>
+																			<div class="lk-aside__icon lk-aside__icon--personal"></div></a><a class="lk-aside__item" href="#">
+																			<div class="lk-aside__text">адресная книга</div>
+																			<div class="lk-aside__icon lk-aside__icon--address"></div></a><a class="lk-aside__item" href="#">
+																			<div class="lk-aside__text">избранное</div>
+																			<div class="lk-aside__icon lk-aside__icon--favorites"></div></a><a class="lk-aside__item" href="#">
+																			<div class="lk-aside__text">дисконтная программа</div>
+																			<div class="lk-aside__icon lk-aside__icon--discont"></div></a>
+																	</div>
+																</div>
 							</aside>
 							<main class="g-content col-xl-9 col-lg-8 col-12" id="workarea">
 							</main>
