--- a/local/src_v6/components/aside/lk-aside/index.pug
+++ b/local/src_v6/components/aside/lk-aside/index.pug
@@ -1,17 +1,7 @@
-.lk-aside
-  .lk-aside__list
-    a.lk-aside__item.active(href='#')
-      .lk-aside__text история заказов
-      .lk-aside__icon.lk-aside__icon--history
-    a.lk-aside__item(href='#')
-      .lk-aside__text персональные данные
-      .lk-aside__icon.lk-aside__icon--personal
-    a.lk-aside__item(href='#')
-      .lk-aside__text адресная книга
-      .lk-aside__icon.lk-aside__icon--address
-    a.lk-aside__item(href='#')
-      .lk-aside__text избранное
-      .lk-aside__icon.lk-aside__icon--favorites
-    a.lk-aside__item(href='#')
-      .lk-aside__text дисконтная программа
-      .lk-aside__icon.lk-aside__icon--discont
+mixin lk-aside(data)
+  .lk-aside
+    .lk-aside__list
+      each item in data.list
+        a.lk-aside__item(href='#', class=(item.className ? item.className : ''))
+          .lk-aside__text !{item.text}
+          .lk-aside__icon(class='lk-aside__icon--' + (item.icon ? item.icon : ''))
