--- a/local/templates/.default/_standart/demo/certificates.html
+++ b/local/templates/.default/_standart/demo/certificates.html
@@ -903,7 +903,7 @@
 												</nav>
 						<h1 id="title">Дипломы и сертификаты</h1>
 						<div class="row">
-							<aside class="g-sidebar col-lg-3 col-12 d-print-none">
+							<aside class="g-sidebar col-xl-3 col-lg-4 col-12 d-print-none">
 								<nav class="menu-aside-3">
 									<ul class="menu_level_1 list-reset break-word">
 										<li class="item_1"><a href="#"><span>Платежно-справочные терминалы</span></a><a class="icon" data-toggle="collapse" href="#accordion-m-0"></a>
@@ -959,7 +959,7 @@
 									</ul>
 								</nav>
 							</aside>
-							<main class="g-content col-lg-9 col-12" id="workarea">
+							<main class="g-content col-xl-9 col-lg-8 col-12" id="workarea">
 								<div class="cert-list stack gallery-hover js-width">
 									<div class="item">
 										<div class="pic js-width-trg">
