--- a/local/templates/.default/_standart/examples/aside.html
+++ b/local/templates/.default/_standart/examples/aside.html
@@ -901,7 +901,7 @@
 												</nav>
 						<h1 id="title">H1 Заголовок страницы. В магазинах начался сезон скидок</h1>
 						<div class="row">
-							<aside class="g-sidebar col-lg-3 col-12 d-print-none">
+							<aside class="g-sidebar col-xl-3 col-lg-4 col-12 d-print-none">
 								<nav class="menu-aside">
 									<ul class="menu_level_1 break-word list-reset">
 										<li class="item_1"><a href="#"><span>Пункт 1</span></a>
@@ -1247,7 +1247,7 @@
 									</script>
 								</div>
 							</aside>
-							<main class="g-content col-lg-9 col-12" id="workarea">
+							<main class="g-content col-xl-9 col-lg-8 col-12" id="workarea">
 							</main>
 						</div>
 					</div>
